added field to expense grid

--- a/src/main/resources/templates/user-dashboard.html
+++ b/src/main/resources/templates/user-dashboard.html
@@ -29,6 +29,7 @@
                 <th>Store</th>
                 <th>Specific Item</th>
                 <th>Amount</th>
+                <th>Date</th>
             </tr>
             </thead>
             <tbody>
