--- a/src/main/resources/templates/new-expense.html
+++ b/src/main/resources/templates/new-expense.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add Expense</title>
-    <link rel="stylesheet" th:href="@{../css/new-expense-style.css}">
+    <link rel="stylesheet" th:href="@{../static/css/new-expense-style.css}">
 </head>
 <body>
 <div class="header">
