--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome - MoneyFlow</title>
-    <link rel="stylesheet" th:href="@{../css/welcome-style.css}">
+    <link rel="stylesheet" th:href="@{/css/welcome-style.css}">
 </head>
 <body>
 <div class="header">MoneyFlow</div>
