--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -35,5 +35,12 @@
         <p>Welcome back! Please fill fields to log in.</p>
     </div>
 </div>
+
+<footer>
+    <p>Need help? Contact us at <a href="mailto:support@moneyflow.com">support@moneyflow.com</a></p>
+    <p>Follow us on <a href="#">Social Media</a></p>
+    <p><a href="/privacy">Privacy Policy</a> | <a href="/terms">Terms of Service</a></p>
+</footer>
+
 </body>
 </html>
