--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -36,5 +36,12 @@
         <p>Welcome! Please fill out all fields to create your account.</p>
     </div>
 </div>
+
+<footer>
+    <p>Need help? Contact us at <a href="mailto:support@moneyflow.com">support@moneyflow.com</a></p>
+    <p>Follow us on <a href="#">Social Media</a></p>
+    <p><a href="/privacy">Privacy Policy</a> | <a href="/terms">Terms of Service</a></p>
+</footer>
+
 </body>
 </html>
